attempt to reslove box vertical stretch bug

--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -157,15 +157,17 @@ img
         width: 25%
         background-color: $primeBlue
         margin: 0 1px 5%
+        align-items: center
+
         .imgBox
             width: 100%
             height: 481px
             overflow: hidden
-            &:hover img
-                transform: scale(1.3)
-            img
-                transform-origin: top
-                transition: transform 5s ease-out
+            // &:hover img
+            //     transform: scale(1.3)
+            // img
+            //     transform-origin: top
+            //     transition: transform 5s ease-out
         h3
             color: $primeWhite
             font-family: $modFont
